<resources>
    <string name="app_name">Do The Dishes</string>
    <string name="app_name_abbrev">do_the_dishes</string>

    <!-- Select Room -->
    <string name="room_id_label">Room ID</string>
    <string name="room_id_hint">12345</string>
    <string name="user_id_label">User ID</string>
    <string name="user_id_hint">Kyle</string>
    <string name="past_room_id_label">Previous Room IDs</string>
    <string name="past_room_id_empty">You have not yet entered any room IDs</string>
    <string name="submit_button">Submit</string>
    <string name="unknown_room_id">UNKNOWN_ROOM_ID</string>
    <string name="unknown_user_id">UNKNOWN_USER_ID</string>
    <string name="separator_or">or</string>
    <string name="button_create_room">Create Room</string>

    <!-- Room View -->
    <string name="welcome_text">%s, you\'re in</string>
    <string name="room_id">Room ID: %s</string>
    <string name="room_name_placeholder">Loading…</string>
    <string name="assignments_upcoming">Upcoming Assignments:</string>
    <string name="assignments_upcoming_empty">You have no upcoming assignments!</string>
    <string name="assignments_other">Assignments:</string>
    <string name="assignments_other_empty">There are no other assignments for this room.</string>
    <string name="assignments_create">New</string>

    <string name="assignment_assigned_you">You</string>

    <string name="action_button_nudge">Nudge</string>
    <string name="action_button_complete">Complete</string>

    <string name="delete_mode_button_on">Stop Deleting</string>
    <string name="delete_mode_button_off">Delete</string>
    <string name="delete_assignment_button">Delete</string>

    <!-- Create Assignment View -->
    <string name="create_assignment_title">Create Assignment</string>
    <string name="create_assignment_field_label_name">Assignment Name</string>
    <string name="create_assignment_field_hint_name">Do the Dishes</string>
    <string name="create_assignment_field_label_assignee">Assign To</string>
    <string name="create_assignment_field_label_repeating">Frequency</string>
    <string name="create_assignment_no_repeat">Single assignment on </string>
    <string name="create_assignment_no_repeat_hint">mm/dd</string>
    <string name="create_assignment_repeat_1">Repeat every </string>
    <string name="create_assignment_repeat_2">day(s), until </string>
    <string name="create_assignment_repeat_hint_1">7</string>
    <string name="create_assignment_repeat_hint_2">mm/dd</string>

    <string name="create_assignment_field_label_availability">Availability</string>

    <string name="create_assignment_button_confirm">Create</string>

    <string name="weekday_sunday">S</string>
    <string name="weekday_monday">M</string>
    <string name="weekday_tuesday">T</string>
    <string name="weekday_wednesday">W</string>
    <string name="weekday_thursday">T</string>
    <string name="weekday_friday">F</string>
    <string name="weekday_saturday">S</string>

    <!-- Create Room -->
    <string name="create_room_title">Create Room</string>
    <string name="create_room_field_name">Room Name</string>
    <string name="create_room_field_name_hint">The Good Place</string>
    <string name="create_room_button_create">Create Room</string>

    <!-- Constants -->
    <string name="user_info_id_key">USER_INFO</string>

</resources>
