<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="24dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/create_room_title"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="12dp"
            android:text="@string/user_id_label"/>

    <EditText
            android:id="@+id/user_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/user_id_hint"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="6dp"
            android:text="@string/create_room_field_name"/>

    <EditText
            android:id="@+id/field_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/create_room_field_name_hint"
            android:padding="14dp"
            android:inputType="text"/>

    <Button
            style="@style/ButtonPrimary"
            android:id="@+id/confirm_button"
            android:layout_width="164dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_room_button_create"/>

</LinearLayout>