<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/create_assignment_title"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="6dp"
                android:text="@string/create_assignment_field_label_name"/>

        <EditText
                android:id="@+id/field_assignment_name"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/create_assignment_field_hint_name"
                android:padding="8dp"
                android:inputType="text"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="6dp"
                android:text="@string/create_assignment_field_label_assignee"/>

        <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/field_assignment_assignee"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:background="@drawable/edit_text_background"
                android:padding="8dp"
                android:inputType="text"
                android:dropDownVerticalOffset="48sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/create_assignment_field_label_repeating"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/repeat_single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_assignment_no_repeat"/>

            <EditText
                    android:id="@+id/no_repeat_date"
                    android:layout_width="120sp"
                    android:layout_height="48sp"
                    android:layout_marginStart="4sp"
                    android:textAlignment="center"
                    android:inputType="date"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/create_assignment_repeat_hint_2"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/repeat_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_assignment_repeat_1"/>

            <EditText
                    android:id="@+id/repeat_custom_days"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:layout_marginStart="4sp"
                    android:layout_marginEnd="4sp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/create_assignment_repeat_hint_1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_assignment_repeat_2"/>

            <EditText
                    android:id="@+id/repeat_custom_end_date"
                    android:layout_width="120sp"
                    android:layout_height="48sp"
                    android:layout_marginStart="4sp"
                    android:textAlignment="center"
                    android:inputType="date"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/create_assignment_repeat_hint_2"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/schedule_exceptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/create_assignment_field_label_availability"/>

            <LinearLayout
                    android:id="@+id/availability_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

        </LinearLayout>

        <Button
                style="@style/ButtonPrimary"
                android:id="@+id/confirm_button"
                android:layout_width="164dp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_assignment_button_confirm"/>

    </LinearLayout>

</ScrollView>