<?xml version="1.0" encoding="utf-8"?>
<com.bchristians.bchristians.dothedishes.selectroom.PreviousRoomView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPale"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="3">

        <TextView
                android:id="@+id/room_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:layout_weight="1"
                android:text="@string/unknown_room_id"
                tools:text="12345"/>

        <TextView
                android:id="@+id/user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:layout_weight="1"
                android:text="@string/unknown_user_id"
                tools:text="Kyle"/>

        <Button
                style="@style/ButtonPrimary"
                android:id="@+id/submit_button_prev"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/submit_button"/>

    </LinearLayout>

</com.bchristians.bchristians.dothedishes.selectroom.PreviousRoomView>